[package]
name = "batched-lazy-image-processing-binary"
version = "0.1.0"
authors = ["Kephren Newton <kephren.newton@harley-davidson.com>"]
edition = "2021"
description = "A batch image processor for cropping, reformatting, and resizing multiple images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "blipb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
fraction = "0.13.1"
gif = "0.12.0"
image = "0.24.7"
rayon = "1.8.0"
