[package]
name = "batched-lazy-image-processing-binary"
version = "0.1.0"
authors = ["Kephren Newton <kephren.newton@harley-davidson.com>"]
edition = "2021"
description = "A batch image processor for cropping, reformatting, and resizing multiple images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "blipb"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
collect_slice = "1.2.0"
fraction = "0.13.1"
gif = "0.12.0"
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
rexiv2 = "0.10.0"
regex = "1.9.5"
eframe = "0.23.0"
rfd = "0.12.0"
egui_extras = { version = "*", features = ["all_loaders"] }
uuid = { version = "1.4.1", features = ["v4"] }
atomic_float = "0.1.0"
