[package]
name = "batched-lazy-image-processing-binary"
version = "0.2.0"
authors = ["Kephren Newton <kephren.newton@harley-davidson.com>"]
edition = "2021"
description = "A batch image processor for cropping, reformatting, and resizing multiple images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "blipb"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
#lto = true
#strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
#codegen-units = 1
#panic = "abort"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
fraction = "0.14.0"
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
rexiv2 = "0.10.0"
regex = "1.10.1"
rfd = "0.12.0"
uuid = { version = "1.4.1", features = ["v4"] }
atomic_float = "0.1.0"
egui_extras = { version = "0.23.0", features = ["image"] }
eframe = { version = "0.23.0", features = ["wgpu"]}
